--- a/apps/pedidos/templates/base/base.html
+++ b/apps/pedidos/templates/base/base.html
@@ -11,5 +11,15 @@
   {% block body %}
 
   {% endblock body %}
+
+  <script>
+    var messsages = [
+      {% for message in messages %}
+        '{{ message.message }}',
+      {% endfor %}
+    ]
+
+    messsages.map(mensagem => alert(mensagem));
+  </script>  
 </body>
 </html>
