--- a/apps/pedidos/templates/base/base_form.html
+++ b/apps/pedidos/templates/base/base_form.html
@@ -1,4 +1,5 @@
 {% extends 'base/base_sistema.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}
   Formulário
@@ -15,8 +16,8 @@
   {% block form %}
     <form action="" method="POST">
       {% csrf_token %}
-      {{ form }}
-      <button type="submit">
+      {{ form|crispy }}
+      <button type="submit" class="btn btn-primary btn-block">
       {% block form_button__text %}
       {% if object %}Atualizar{% else %}Criar{% endif %}
       {% endblock form_button__text %}
