--- a/apps/pedidos/templates/base/base.html
+++ b/apps/pedidos/templates/base/base.html
@@ -1,10 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS -->
-  <!-- JS -->
+  <link rel="stylesheet" href="{% static 'contrib/bootstrap/css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <title>Pedidos - {% block title %}{% endblock title %}</title>
 </head>
 <body>
@@ -12,6 +15,10 @@
 
   {% endblock body %}
 
+  <!-- JS -->
+  <script src="{% static 'contrib/jquery/jquery.slim.min.js' %}"></script>
+  <script src="{% static 'contrib/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'js/scripts.js' %}"></script>
   <script>
     var messsages = [
       {% for message in messages %}
