--- a/apps/pedidos/templates/registration/login.html
+++ b/apps/pedidos/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends 'base/base_login.html' %}
+{% load crispy_forms_tags %}
 
   {% block title %}Login{% endblock title %}
 
@@ -6,7 +7,7 @@
   {% block form %}
     <form action="" method="post">
       {% csrf_token %}
-      {{ form }}
-      <input type="submit" value="login">
+      {{ form | crispy }}
+      <button type="submit" class="btn-primary btn-block">login</button>
     </form>
   {% endblock form %}
