--- a/apps/pedidos/templates/base/base_sistema.html
+++ b/apps/pedidos/templates/base/base_sistema.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" aria-controls="navbarSupportedContent">
       <ul class="navbar-nav nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Pedidos</span></a>
+          <a class="nav-link" href="{% url 'pedido__list' %}">Pedidos</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'cliente__list' %}">Clientes</span></a>
